Added som funny stuff

--- a/upggift_2/index.html
+++ b/upggift_2/index.html
@@ -7,22 +7,25 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header> hola<!-- sidhuvud --> </header>
+    <header> Welcome To My Homepage<!-- sidhuvud --> </header>
         <nav> <!-- meny -->
             <ul class="primary-navigation">
-                <li>hem</li>                 
-                <li>projekt</li>             
-                <li>Hjälp</li> 
-                <li>LOL</li>               
-                <li>lista</li>                 
-                <li>om</li>               
+                <li><button>Home</button></li>                 
+                <li><button>project</button></li>             
+                <li><button>Help</button></li> 
+                <li><button>LOL</button></li>               
+                <li><button>List</button></li>                 
+                <li><button>About</button></li>               
             </ul>
         </nav>
     </header>
-        <main>  <!-- innehållet på sidan -->
+        <main> 
+            <h1>Home</h1> <!-- innehållet på sidan -->
             <section>
-                <p> Huvudinnehållet detta är min sida </p>
+                <p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aut iure maiores iusto voluptates. Et nobis neque quos cum aspernatur corporis est natus deleniti fugit provident illo iusto odit, quia quam? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolore necessitatibus nesciunt repellendus aperiam est cupiditate quas corporis voluptatem blanditiis exercitationem provident, eaque quis eos consequatur aut, itaque excepturi perferendis quae? Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae deserunt quisquam fugit laborum doloremque alias reiciendis aspernatur mollitia vero praesentium recusandae ducimus, ad quos dolore eius! Maxime, dolore? Nam, sit.Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus quasi sit illo? Soluta vero iure est accusantium dignissimos dolor cum unde error repudiandae iusto a quasi qui, sit quae et. </p>
             </section>
+            <h2>WOW! Cool picture </h2>
+            <img src="bilder/Shrek.jpg" alt="shrek">
         </main>
         <footer> <!-- sidfot -->
             <!-- nav, info, social links -->
